src/Tests/Spectre.Console.Tests/Expectations/Cli/Parsing/UnknownCommand/Test_5.Output.verified.txt
Error: Unknown command 'bat'.

       bat
       ^^^ Did you mean 'cat'?